syntax = "proto3";
package grpc;
option java_package = "com.cj.scores.web.grpc";
option java_outer_classname = "UserScoreServiceGrpc";
option java_multiple_files = true;

//服务端接口类
service UserScore {
  rpc updateScore (UserScoreGrpcRequest) returns (GrpcResult) {}      //修改积分
  rpc getScoreByUid (UserSelectRequest) returns (GrpcResult) {}   // 查询剩余积分 只需参数uid 数据返回在data里的json字符串
  rpc getScoreLogByUid (UserSelectRequest) returns (GrpcResult) {} // 查询积分日志 只需参数uid 数据返回在data里的json字符串
}


message UserSelectRequest {
    int64 uid = 1;
    int32 page_num = 2;
    int32 page_size = 3;
}

//请求参数
message UserScoreGrpcRequest {
  int32 type = 1;
  int64 uid = 2;
  double change_scores = 3;
  int32 src_id = 4;
  string comment = 5;
}

//响应参数
message GrpcResult {
  string code = 1;
  string msg = 2;
  string data = 3;
}